Renamed main menu's links in spanish version   Fixed main menu alignment on ipad in portrait

--- a/assets/stylesheets/config/_responsive-medium.scss
+++ b/assets/stylesheets/config/_responsive-medium.scss
@@ -268,6 +268,19 @@
       }
     }
   }
+
+  #main-menu.en {
+    #getting-to-manzanillo {
+
+      span {
+        display: none;
+      }
+
+      &:after {
+        display: inline-block;
+      }
+    }
+  }
 }
 
 @media screen and (min-width: 916px) and (max-width: 1024px) {
