--- a/assets/stylesheets/config/mobile/android/_menu.scss
+++ b/assets/stylesheets/config/mobile/android/_menu.scss
@@ -106,7 +106,7 @@
           background-position: 14px 39px;
           padding: 40px 10px 20px;
         }
-        a {
+        a, span {
           background: image_url('sprite.svg') no-repeat;
           background-size: 174px 180px;
           background-position: -155px -97px;
